Update all mockups with consistent blue color scheme (#6200ee)

--- a/frontend/assets/screenshots/ai_granny_screen.html
+++ b/frontend/assets/screenshots/ai_granny_screen.html
@@ -23,7 +23,7 @@
         }
         .status-bar {
             height: 44px;
-            background-color: #ff9800;
+            background-color: #6200ee;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -32,7 +32,7 @@
             font-weight: bold;
         }
         .header {
-            background-color: #ff9800;
+            background-color: #6200ee;
             color: white;
             padding: 16px;
             display: flex;
@@ -47,7 +47,7 @@
             width: 60px;
             height: 60px;
             border-radius: 30px;
-            background-color: #ffcc80;
+            background-color: #e6e0ff;
             margin-right: 16px;
             display: flex;
             align-items: center;
@@ -71,7 +71,7 @@
             position: relative;
         }
         .granny-message {
-            background-color: #fff3e0;
+            background-color: #e6e0ff;
             border-top-left-radius: 4px;
             align-self: flex-start;
         }
@@ -109,7 +109,7 @@
             width: 40px;
             height: 40px;
             border-radius: 20px;
-            background-color: #ff9800;
+            background-color: #6200ee;
             color: white;
             display: flex;
             align-items: center;
@@ -120,7 +120,7 @@
             width: 40px;
             height: 40px;
             border-radius: 20px;
-            background-color: #ff9800;
+            background-color: #6200ee;
             color: white;
             display: flex;
             align-items: center;
@@ -135,8 +135,8 @@
             margin-bottom: 16px;
         }
         .quick-reply {
-            background-color: #fff3e0;
-            border: 1px solid #ffcc80;
+            background-color: #e6e0ff;
+            border: 1px solid #d0c4ff;
             border-radius: 18px;
             padding: 8px 16px;
             margin-right: 8px;
@@ -148,29 +148,31 @@
             border-radius: 8px;
             padding: 16px;
             margin-bottom: 16px;
-            border-left: 4px solid #4caf50;
+            border-left: 4px solid #6200ee;
         }
         .health-tip-title {
             font-weight: bold;
             margin-bottom: 8px;
             display: flex;
             align-items: center;
+            color: #6200ee;
         }
         .health-tip-title span {
             margin-right: 8px;
         }
         .reminder {
-            background-color: #fff3e0;
+            background-color: #e6e0ff;
             border-radius: 8px;
             padding: 16px;
             margin-bottom: 16px;
-            border-left: 4px solid #ff9800;
+            border-left: 4px solid #6200ee;
         }
         .reminder-title {
             font-weight: bold;
             margin-bottom: 8px;
             display: flex;
             align-items: center;
+            color: #6200ee;
         }
         .reminder-title span {
             margin-right: 8px;
@@ -181,7 +183,7 @@
             margin-top: 8px;
         }
         .reminder-button {
-            background-color: #ff9800;
+            background-color: #6200ee;
             color: white;
             border: none;
             border-radius: 4px;
@@ -209,7 +211,7 @@
             flex: 1;
         }
         .nav-item.active {
-            color: #ff9800;
+            color: #6200ee;
         }
         .nav-item-icon {
             font-size: 24px;
