--- a/frontend/assets/screenshots/diet_plan_screen.html
+++ b/frontend/assets/screenshots/diet_plan_screen.html
@@ -23,7 +23,7 @@
         }
         .status-bar {
             height: 44px;
-            background-color: #4caf50;
+            background-color: #6200ee;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -32,7 +32,7 @@
             font-weight: bold;
         }
         .header {
-            background-color: #4caf50;
+            background-color: #6200ee;
             color: white;
             padding: 16px;
         }
@@ -57,8 +57,8 @@
             font-weight: 500;
         }
         .tab.active {
-            color: #4caf50;
-            border-bottom: 2px solid #4caf50;
+            color: #6200ee;
+            border-bottom: 2px solid #6200ee;
         }
         .content {
             padding: 16px;
@@ -77,7 +77,7 @@
             margin-top: 0;
         }
         .view-all {
-            color: #4caf50;
+            color: #6200ee;
             font-size: 14px;
             font-weight: normal;
         }
@@ -98,7 +98,7 @@
             width: 40px;
             height: 40px;
             border-radius: 20px;
-            background-color: #e8f5e9;
+            background-color: #e6e0ff;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -157,12 +157,12 @@
             border-top: 1px solid #f0f0f0;
         }
         .meal-action {
-            color: #4caf50;
+            color: #6200ee;
             font-weight: 500;
             font-size: 14px;
         }
         .diet-summary {
-            background-color: #e8f5e9;
+            background-color: #e6e0ff;
             border-radius: 8px;
             padding: 16px;
             margin-bottom: 16px;
@@ -196,7 +196,7 @@
         }
         .diet-progress-bar {
             height: 100%;
-            background-color: #4caf50;
+            background-color: #6200ee;
             width: 65%;
         }
         .diet-tip {
@@ -204,13 +204,14 @@
             border-radius: 8px;
             padding: 16px;
             margin-bottom: 16px;
-            border-left: 4px solid #ffc107;
+            border-left: 4px solid #6200ee;
         }
         .diet-tip-title {
             font-weight: bold;
             margin-bottom: 8px;
             display: flex;
             align-items: center;
+            color: #6200ee;
         }
         .diet-tip-title span {
             margin-right: 8px;
@@ -241,7 +242,7 @@
         }
         .preference-value {
             font-size: 14px;
-            color: #4caf50;
+            color: #6200ee;
             font-weight: 500;
         }
         .fab {
@@ -251,7 +252,7 @@
             width: 56px;
             height: 56px;
             border-radius: 28px;
-            background-color: #4caf50;
+            background-color: #6200ee;
             color: white;
             display: flex;
             align-items: center;
@@ -279,7 +280,7 @@
             flex: 1;
         }
         .nav-item.active {
-            color: #4caf50;
+            color: #6200ee;
         }
         .nav-item-icon {
             font-size: 24px;
