--- a/frontend/assets/screenshots/health_records_screen.html
+++ b/frontend/assets/screenshots/health_records_screen.html
@@ -332,12 +332,16 @@
         
         <div class="bottom-nav">
             <div class="nav-item">
-                <div class="nav-item-icon">🤖</div>
-                <div class="nav-item-label">AI Caretaker</div>
+                <div class="nav-item-icon">🏠</div>
+                <div class="nav-item-label">Home</div>
+            </div>
+            <div class="nav-item">
+                <div class="nav-item-icon">👵</div>
+                <div class="nav-item-label">AI Granny</div>
             </div>
             <div class="nav-item">
                 <div class="nav-item-icon">💊</div>
-                <div class="nav-item-label">Medications</div>
+                <div class="nav-item-label">Meds</div>
             </div>
             <div class="nav-item">
                 <div class="nav-item-icon">🍎</div>
@@ -346,10 +350,6 @@
             <div class="nav-item active">
                 <div class="nav-item-icon">📄</div>
                 <div class="nav-item-label">Records</div>
-            </div>
-            <div class="nav-item">
-                <div class="nav-item-icon">⋯</div>
-                <div class="nav-item-label">More</div>
             </div>
         </div>
     </div>
