--- a/frontend/assets/screenshots/home_screen_updated.html
+++ b/frontend/assets/screenshots/home_screen_updated.html
@@ -102,20 +102,20 @@
             margin-right: 12px;
         }
         .ai-granny-icon {
-            background-color: #ffebee;
-            color: #f44336;
+            background-color: #e6e0ff;
+            color: #6200ee;
         }
         .medication-icon {
-            background-color: #e8f5e9;
-            color: #4caf50;
+            background-color: #e6e0ff;
+            color: #6200ee;
         }
         .diet-icon {
-            background-color: #fff3e0;
-            color: #ff9800;
+            background-color: #e6e0ff;
+            color: #6200ee;
         }
         .vitals-icon {
-            background-color: #e3f2fd;
-            color: #2196f3;
+            background-color: #e6e0ff;
+            color: #6200ee;
         }
         .records-icon {
             background-color: #e6e0ff;
@@ -137,13 +137,13 @@
             padding: 16px;
         }
         .ai-granny-card {
-            background-color: #fffbf2;
+            background-color: #f9f5ff;
             border: none;
             border-radius: 12px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
         }
         .ai-granny-header {
-            background-color: #fff3e0;
+            background-color: #e6e0ff;
             padding: 16px;
             display: flex;
             align-items: center;
@@ -152,7 +152,7 @@
             width: 60px;
             height: 60px;
             border-radius: 30px;
-            background-color: #ffcc80;
+            background-color: #d0c4ff;
             margin-right: 16px;
             display: flex;
             align-items: center;
@@ -162,7 +162,7 @@
         .ai-granny-info h2 {
             margin: 0;
             font-size: 20px;
-            color: #e65100;
+            color: #6200ee;
         }
         .ai-granny-info p {
             margin: 4px 0 0;
@@ -185,7 +185,7 @@
             margin-top: 16px;
         }
         .ai-granny-button {
-            background-color: #ff9800;
+            background-color: #6200ee;
             color: white;
             border: none;
             border-radius: 20px;
